--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <artifactId>InventorySystem</artifactId>
     <version>6.4.0.GA</version>
     <packaging>war</packaging>
-    <name>JBoss EAP Quickstart: helloworld-ws</name>
+    <name>JBoss EAP Quickstart: InventorySystem-ws</name>
     <description>JBoss EAP Quickstart: Hello World JAX-WS Web service</description>
 
     <url>http://jboss.org/jbossas</url>
